	    REFUSED, in this case, when it should be the same as when
	    upstream servers are configured - NOERROR. Thanks to 
	    Allain Legacy for spotting the problem.

	    Return REFUSED when running out of forwarding table slots,
	    not SERVFAIL.

            Add --max-port configuration. Thanks to Hans Dedecker for
	    the patch.
	
	
version 2.75
            Fix reversion on 2.74 which caused 100% CPU use when a 
	    dhcp-script is configured. Thanks to Adrian Davey for
	    reporting the bug and testing the fix.

	
version 2.74
            Fix reversion in 2.73 where --conf-file would attempt to
	    read the default file, rather than no file.

	    Fix inotify code to handle dangling symlinks better and
	    not SEGV in some circumstances.

	    DNSSEC fix. In the case of a signed CNAME generated by a
	    wildcard which pointed to an unsigned domain, the wrong
            status would be logged, and some necessary checks omitted.
	

version 2.73
            Fix crash at startup when an empty suffix is supplied to
	    --conf-dir, also trivial memory leak. Thanks to 
	    Tomas Hozza for spotting this.

	    Remove floor of 4096 on advertised EDNS0 packet size when 
	    DNSSEC in use, the original rationale for this has long gone.
	    Thanks to Anders Kaseorg for spotting this.

	    Use inotify for checking on updates to /etc/resolv.conf and
	    friends under Linux. This fixes race conditions when the files are 
	    updated rapidly and saves CPU by noy polling. To build
	    a binary that runs on old Linux kernels without inotify,
	    use make COPTS=-DNO_INOTIFY

	    Fix breakage of --domain=<domain>,<subnet>,local - only reverse
	    queries were intercepted. THis appears to have been broken 
	    since 2.69. Thanks to Josh Stone for finding the bug.

	    Eliminate IPv6 privacy addresses and deprecated addresses from
	    the answers given by --interface-name. Note that reverse queries