@@ -33,7 +33,18 @@ version 2.76
 
             Add --max-port configuration. Thanks to Hans Dedecker for
 	    the patch.
+
+	    Add --script-arp and two new functions for the dhcp-script.
+	    These are "arp" and "arp-old" which announce the arrival and
+	    removal of entries in the ARP or nieghbour tables.
+
+	    Extend --add-mac to allow a new encoding of the MAC address 
+	    as base64, by configurting --add-mac=base64
+
+	    Add --add-cpe-id option.
+
 	
+	    
 	
 version 2.75
             Fix reversion on 2.74 which caused 100% CPU use when a 
